- 이미지 작업 및 코드 정리 중

--- a/assets/02-css/03-cssMiddleclass/09-css_media_part2.html
+++ b/assets/02-css/03-cssMiddleclass/09-css_media_part2.html
@@ -70,7 +70,7 @@
 		</p>
 		<figure class="img_figure mt_m">
 			<img src="/ukncs/images/css/cssMiddleclass/uxkm_media-query-breakpoints.svg" alt="viewport breakpoint">
-			<figcaption>[viewport breakpoint]</figcaption>
+			<figcaption class="sound_only">[viewport breakpoint]</figcaption>
 		</figure>
 
 		<!-- 반응형 웹(Responsive Web) -->
