--- a/assets/02-css/04-cssAdvanced/01-css_transform_part1.html
+++ b/assets/02-css/04-cssAdvanced/01-css_transform_part1.html
@@ -146,8 +146,8 @@
 						<p>주어진 각도가 양수이면 x, y축의 양의 방향으로, 음수이면 x, y축의 음의 방향으로 기울입니다.</p>
 						<p>x, y축을 한번에 지정 가능하며, 한번에 지정할 경우 콤마(,)로 구분하여 사용하고, x축, y축을 따로 명시하여 사용할 수 있습니다.</p>
 						<figure class="img_figure mt_s">
-							<img src="/ukncs/images/css/cssAdvanced/uxkm_transform-skew.svg" alt="skew() 함수">
-							<figcaption>[skew() 함수]</figcaption>
+							<figcaption class="mt_0">[<code class="bg_none t_blue">skew()</code> 함수]</figcaption>
+							<img src="/ukncs/images/css/cssAdvanced/uxkm_transform-skew.svg" alt="skew() 함수" class="mt_m">
 						</figure>
 						<p class="mt_s">
 							비틀기의 원리 예시로 가로 방향으로 비틀면 x축은 가만히 있고 y축이 비튼 각도만큼 회전하게 됩니다.<br>
@@ -221,11 +221,11 @@
 							<code>translate()</code> 함수는 물리적으로 시야에 존재하는 한 해당 요소가 본래 차지하고 있던 공간을 그대로 유지하게 됩니다.
 						</p>
 						<figure class="img_figure mt_s">
-							<img src="/ukncs/images/css/cssAdvanced/uxkm_transform-translate.svg" alt="translate 함수 예시">
-							<figcaption>
-								<i>[translate 함수 예시]</i>
-								<p class="mt_s">8번 박스를 이동시켰음에도 본래 차지(그 공간을 사용하지 않더라도)하고 있던 공간(빨간 보더 공간)은 유지합니다.</p>
+							<figcaption class="mt_0">
+								<i>[<code class="bg_none t_blue">translate</code> 함수 예시]</i><br>
+								<span class="mt_s">8번 박스를 이동시켰음에도 본래 차지(그 공간을 사용하지 않더라도)하고 있던 공간(빨간 보더 공간)은 유지합니다.</span>
 							</figcaption>
+							<img src="/ukncs/images/css/cssAdvanced/uxkm_transform-translate.svg" alt="translate 함수 예시" class="mt_m">
 						</figure>
 						<blockquote class="uk_note mt_s" role="note">
 							<h5 class="sound_only">요약 설명</h5>
@@ -284,7 +284,7 @@
 							a1 c1 b1 d1 a2 c2 b2 d2 = a1 a2 + c1 b2 a1 c2 + c1 d2 b1 a2 + d1 b2 b1 c2 + d1 d2
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[<b class="t_black weight-500">matrix 표</b><!-- 이미지 참조 : wikimedia matrix]--></figcaption>
+							<figcaption class="mt_0">[ <b class="t_black weight-500">matrix 표</b> ]</figcaption>
 							<!--
 							<div class="mt_m">
 								<img src="/ukncs/images/css/cssAdvanced/img_matrix2.png" alt="matrix 표" class="max-w900">
