--- a/assets/02-css/04-cssAdvanced/01-css_transform_part2.html
+++ b/assets/02-css/04-cssAdvanced/01-css_transform_part2.html
@@ -328,8 +328,8 @@
 			</ol>
 
 			<figure class="img_figure mt_m">
-				<img src="/ukncs/images/css/cssAdvanced/uxkm_transform-perspective.svg" alt="3D 효과를 이해하기 위한 x축, y축, z축에 대한 그림">
-				<figcaption>[3D 효과를 이해하기 위한 x축, y축, z축에 대한 그림]</figcaption>
+				<figcaption class="mt_0">[3D 효과를 이해하기 위한 <i class="t_green">x축</i>, <i class="t_purple">y축</i>, <i class="t_blue">z축</i>에 대한 그림]</figcaption>
+				<img src="/ukncs/images/css/cssAdvanced/uxkm_transform-perspective.svg" alt="3D 효과를 이해하기 위한 x축, y축, z축에 대한 그림" class="mt_s">
 			</figure>
 			<div class="view_editor edit_code mt_m" data-target="css/step03/4.1.transform/4.1.2.css3-3d-transform-perspective.html">
 				<div  class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -372,8 +372,8 @@
 			</div>
 
 			<figure class="img_figure mt_m">
-				<img src="/ukncs/images/css/cssAdvanced/uxkm_transform_backface-visibility.svg" alt="backface-visibility">
-				<figcaption>[backface-visibility]</figcaption>
+				<figcaption class="mt_0"><code class="bg_none t_444">[ backface-visibility ]</code></figcaption>
+				<img src="/ukncs/images/css/cssAdvanced/uxkm_transform_backface-visibility.svg" alt="backface-visibility" class="mt_s">
 			</figure>
 			<div class="view_editor edit_code mt_ml" data-target="css/step03/4.1.transform/4.1.2.css3-3d-transform-backface-visibility.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
