--- a/assets/02-css/04-cssAdvanced/02-css_transition.html
+++ b/assets/02-css/04-cssAdvanced/02-css_transition.html
@@ -165,7 +165,7 @@
 			</p>
 			</div>
 			<figure class="img_figure mt_s">
-				<figcaption class="mt_0">[cubic-bezier 곡선 그래프]</figcaption>
+				<figcaption class="mt_0">[<code class="bg_none t_blue">cubic-bezier</code> 곡선 그래프]</figcaption>
 				<img src="/ukncs/images/css/cssAdvanced/uxkm_transition_cubic-bezier.svg" alt="cubic-bezier 곡선 그래프1" class="mt_m">
 			</figure>
 			<!--<figure class="img_figure mt_s">
