--- a/assets/02-css/04-cssAdvanced/05-css_grid_part5.html
+++ b/assets/02-css/04-cssAdvanced/05-css_grid_part5.html
@@ -33,7 +33,7 @@
 			</p>
 			<figure class="img_figure mt_m">
 				<figcaption class="mt_0">[ Box 정렬 좌 ⟹ 우 / 우 ⟹ 좌 ]</figcaption>
-				<img src="/ukncs/images/css/grid-box-align-start.png" alt="Box 정렬 좌 ⟹ 우 / 우 ⟹ 좌" class="mt_s max-w800">
+				<img src="/ukncs/images/css/grid/grid-box-align-start.png" alt="Box 정렬 좌 ⟹ 우 / 우 ⟹ 좌" class="mt_s max-w800">
 			</figure>
 		</article>
 
@@ -60,8 +60,8 @@
 				</li>
 			</ol>
 			<figure class="img_figure mt_m">
-				<figcaption class="mt_0">[ Block / Inline 축(Axis) ]</figcaption>
-				<img src="/ukncs/images/css/grid-box-block_inline.png" alt="Block / Inline 축(Axis)" class="mt_s max-w800">
+				<figcaption class="mt_0">[ <code class="bg_none"><i class="t_blue">Block</i> / <i class="t_blue">Inline</i></code> 축(Axis) ]</figcaption>
+				<img src="/ukncs/images/css/grid/uxkm_grid-box-block_inline.svg" alt="Block / Inline 축(Axis)" class="mt_s">
 			</figure>
 		</article>
 
@@ -73,10 +73,100 @@
 				grid 레이아웃은 <code>column</code> 축에 해당되며, 명확하게 수직 방향으로만 정렬이 설정됩니다.<br>
 				반면 flexbox는 <code>flex-direction</code> 속성 설정에 따라 교차 축의 방향이 바뀌기 때문에, 교차 축에 영향을 받는 <code>align-*</code> 속성의 정렬 또한 바뀝니다.
 			</p>
+			<!--
 			<figure class="img_figure mt_m">
-				<figcaption class="mt_0">[ align-self / align-items ]</figcaption>
+				<figcaption class="mt_0">[ <code class="bg_none"><i class="t_blue">align-self</i> / <i class="t_blue">align-items</i></code> (블록 축에서 아이템 / 아이템 그룹 정렬) ]</figcaption>
 				<img src="/ukncs/images/css/grid-box-align-self-items.png" alt="align-self / align-items" class="mt_s max-w1200">
 			</figure>
+			-->
+			<div class="grid_flex mt_m">
+				<h4 class="">grid와 flex 비교</h4>
+				<div class="vs_table mt_ms">
+					<div class="in_table">
+						<h5><code class="bg_none">grid</code></h5>
+						<dl class="h_line">
+							<dt>정렬 컨테이너</dt>
+							<dd>
+								Grid 영역(Area)
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>기본 동작</dt>
+							<dd>
+								일정 비율을 가진 아이템을 제외하고는 <code class="bg_none t_444">stretch</code>가 설정된 것처럼 늘어난 형태로 동작합니다.
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>설정 가능한 값</dt>
+							<dd>
+								<code class="bg_none t_444">
+								auto, normal, start, end, center, stretch,<br>
+								baseline, first-baseline, last-baseline
+								</code>
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>허용 범위</dt>
+							<dd>
+								블록 / 컬럼(<code class="bg_none t_444">column</code>) 축
+							</dd>
+						</dl>
+						<dl class="v_line">
+							<dt>예시</dt>
+							<dd>
+								<code class="bg_none t_blue">align-self</code>의 기본 동작은 <code class="bg_none t_blue">stretch</code> 입니다.<br>
+								<code class="bg_none t_blue">start</code>값을 설정하면 <mark>그리드 컨테이너 블록 축의 시작 부분에 정렬</mark>됩니다.
+							</dd>
+						</dl>
+						<figure class="img_figure mt_ms">
+							<img src="/ukncs/images/css/grid/uxkm_grid_g-vs-f_align-self-items1.svg" alt="grid align-self / align-items">
+						</figure>
+					</div>
+					<div class="in_table">
+						<h5><code class="bg_none">flex</code></h5>
+						<dl class="h_line">
+							<dt>정렬 컨테이너</dt>
+							<dd>
+								아이템이 있는 Flex 라인
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>기본 동작</dt>
+							<dd>
+								<code class="bg_none t_444">stretch</code> 값이 기본 입니다.
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>설정 가능한 값</dt>
+							<dd>
+								<code class="bg_none t_444">
+								auto, normal, flex-start, flex-end, center, stretch,<br>
+								baseline, first-baseline, last-baseline
+								</code>
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>허용 범위</dt>
+							<dd>
+								블록 / 교차(<code class="bg_none t_444">cross</code>) 축
+							</dd>
+						</dl>
+						<dl class="v_line">
+							<dt>예시</dt>
+							<dd>
+								<code class="bg_none t_blue">align-self</code>의 기본 동작은 <code class="bg_none t_blue">stretch</code> 입니다.
+								<code class="bg_none t_blue">flex-direction</code> 설정 값에 따라 늘어나는 방향이 변경됩니다.<br>
+								<mark><code class="bg_none t_222">row</code>일 경우 <code class="bg_none t_222">height</code></mark>,
+								<mark><code class="bg_none t_222">column</code>일 경우 <code class="bg_none t_222">width</code></mark>로 설정됩니다.<br>
+								<code class="bg_none t_blue">start</code> 값을 설정하면 교차 축의 시작 부분에 정렬됩니다.
+							</dd>
+						</dl>
+						<figure class="img_figure mt_ms">
+							<img src="/ukncs/images/css/grid/uxkm_grid_g-vs-f_align-self-items2.svg" alt="flex align-self / align-items">
+						</figure>
+					</div>
+				</div>
+			</div>
 		</article>
 
 		<!-- 4.5.7.4. justify-self / justify-items -->
@@ -88,10 +178,67 @@
 				반면 flexbox 에는 <code>justify-self</code>, <code>justify-items</code>과 같은 속성을 지원하지 않습니다.<br>
 				개별 아이템을 주 축 방향을 기준으로 정렬하고자 한다면 <code>margin</code> 속성을 사용 합니다.
 			</p>
+			<!--
 			<figure class="img_figure mt_m">
 				<figcaption class="mt_0">[ justify-self / justify-items ]</figcaption>
 				<img src="/ukncs/images/css/grid-box-justify-self-items.png" alt="justify-self / justify-items" class="mt_s max-w1200">
 			</figure>
+			-->
+			<div class="grid_flex mt_m">
+				<h4 class="">grid와 flex 비교</h4>
+				<div class="vs_table mt_ms">
+					<div class="in_table">
+						<h5><code class="bg_none">grid</code></h5>
+						<dl class="h_line">
+							<dt>정렬 컨테이너</dt>
+							<dd>
+								Grid 영역(Area)
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>기본 동작</dt>
+							<dd>
+								일정 비율을 가진 아이템을 제외하고는 <code class="bg_none t_444">stretch</code>가 설정된 것처럼 늘어난 형태로 동작합니다.
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>설정 가능한 값</dt>
+							<dd>
+								<code class="bg_none t_444">
+								auto, normal, start, end, center, stretch,<br>
+								baseline, first-baseline, last-baseline
+								</code>
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>허용 범위</dt>
+							<dd>
+								인라인 / 행(<code class="bg_none t_444">row</code>) 축
+							</dd>
+						</dl>
+						<dl class="v_line">
+							<dt>예시</dt>
+							<dd>
+								<code class="bg_none t_blue">justify-self</code>의 기본 동작은 <code class="bg_none t_blue">stretch</code> 입니다.<br>
+								<code class="bg_none t_blue">start</code>값을 설정하면 <mark>그리드 컨테이너 인라인 축의 시작 부분에 정렬</mark>됩니다.
+							</dd>
+						</dl>
+						<figure class="img_figure mt_ms">
+							<img src="/ukncs/images/css/grid/uxkm_grid_g-vs-f_justify-self-items.svg" alt="grid justify-self / justify-items">
+						</figure>
+					</div>
+					<div class="in_table">
+						<h5><code class="bg_none">flex</code></h5>
+						<p class="con_none">
+							<mark><code class="bg_none t_444">justify-self</code> 속성은 Flexbox에 적용되지 않습니다.</mark><br>
+							주 축에 여러 아이템이 존재해 이들 중 하나를 조정할 수 없습니다.
+							주 축에 콘텐츠를 정렬하고자 한다면 아래 작성된 <code class="bg_none t_444">justify-content</code> 속성을 참고하세요.<br><br>
+
+							인라인 축에 하나의 아이템만 정렬하고자 한다면, <code class="bg_none t_444">margin</code> 속성을 사용해 아이템을 정렬할 수 있습니다.
+						</p>
+					</div>
+				</div>
+			</div>
 		</article>
 
 		<!-- 4.5.7.5. align-content -->
@@ -102,10 +249,110 @@
 				grid 레이아웃은 <code>column</code> 축에 해당되며, 그리드 컨테이너에 여유 공간이 존재할 경우 정렬이 반영됩니다.<br>
 				flexbox 또한 컨테이너에 여유 공간이 있다면 정렬을 수행할 수 있습니다.
 			</p>
+			<!--
 			<figure class="img_figure mt_m">
 				<figcaption class="mt_0">[ align-content ]</figcaption>
 				<img src="/ukncs/images/css/grid-box-align-content.png" alt="align-content" class="mt_s max-w1200">
 			</figure>
+			-->
+			<div class="grid_flex mt_m">
+				<h4 class="">grid와 flex 비교</h4>
+				<div class="vs_table mt_ms">
+					<div class="in_table">
+						<h5><code class="bg_none">grid</code></h5>
+						<dl class="h_line">
+							<dt>정렬 컨테이너</dt>
+							<dd>
+								Grid 컨테이너(Container)
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>기본 동작</dt>
+							<dd>
+								일정 비율을 가진 아이템을 제외하고는 <code class="bg_none t_444">stretch</code>가 설정된 것처럼 늘어난 형태로 동작합니다.
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>설정 가능한 값</dt>
+							<dd>
+								<code class="bg_none t_444">
+								normal, start, end, center, stretch,<br>
+								space-between, space-around, space-evenly,<br>
+								baseline, first baseline, last baseline
+								</code>
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>허용 범위</dt>
+							<dd>
+								블록 / 열(<code class="bg_none t_444">column</code>) 축
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>요구 조건</dt>
+							<dd>
+								그리드 컨테이너의 여유 공간
+							</dd>
+						</dl>
+						<dl class="v_line">
+							<dt>예시</dt>
+							<dd>
+								그리드 트랙 크기가 컨테이너 크기보다 작은 경우, 시작 부분에 정렬됩니다.<br>
+								<code class="bg_none t_blue">space-between</code> 값을 설정하면 <mark>블록 축(수직 방향)을 기준으로 공간을 분산 정렬</mark>합니다.
+							</dd>
+						</dl>
+						<figure class="img_figure mt_ms">
+							<img src="/ukncs/images/css/grid/uxkm_grid_g-vs-f_align-content1.svg" alt="grid align-content">
+						</figure>
+					</div>
+					<div class="in_table">
+						<h5><code class="bg_none">flex</code></h5>
+						<dl class="h_line">
+							<dt>정렬 컨테이너</dt>
+							<dd>
+								Flex 컨테이너(Container)
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>기본 동작</dt>
+							<dd>
+								<code class="bg_none t_444">stretch</code> 값이 기본 입니다.
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>설정 가능한 값</dt>
+							<dd>
+								<code class="bg_none t_444">
+								normal, flex-start, flex-end, center, stretch,<br>
+								space-between, space-around, space-evenly,<br>
+								baseline, first baseline, last baseline
+								</code>
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>허용 범위</dt>
+							<dd>
+								블록 / 교차(<code class="bg_none t_444">cross</code>) 축
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>요구 조건</dt>
+							<dd>
+								컨테이너가 아이템보다 표시할 수 있는 공간이 주어질 경우, 정렬을 사용할 수 있습니다.
+							</dd>
+						</dl>
+						<dl class="v_line">
+							<dt>예시</dt>
+							<dd>
+								<code class="bg_none t_blue">align-content</code> 속성은 <mark>컨테이너에 여유 공간이 있을 때 공간을 분산 정렬</mark>하도록 설정할 수 있습니다.
+							</dd>
+						</dl>
+						<figure class="img_figure mt_ms">
+							<img src="/ukncs/images/css/grid/uxkm_grid_g-vs-f_align-content2.svg" alt="flex align-content">
+						</figure>
+					</div>
+				</div>
+			</div>
 		</article>
 
 		<!-- 4.5.7.6. justify-content -->
@@ -115,10 +362,110 @@
 				grid 레이아웃은 <code>column</code> 축에 해당되며, 그리드 컨테이너에 여유 공간이 존재할 경우 정렬이 반영됩니다.<br>
 				flexbox 또한 컨테이너에 여유 공간이 있다면 정렬을 수행할 수 있습니다.
 			</p>
+			<!--
 			<figure class="img_figure mt_m">
 				<figcaption class="mt_0">[ justify-content ]</figcaption>
 				<img src="/ukncs/images/css/grid-box-justify-content.png" alt="justify-content" class="mt_s max-w1200">
 			</figure>
+			-->
+			<div class="grid_flex mt_m">
+				<h4 class="">grid와 flex 비교</h4>
+				<div class="vs_table mt_ms">
+					<div class="in_table">
+						<h5><code class="bg_none">grid</code></h5>
+						<dl class="h_line">
+							<dt>정렬 컨테이너</dt>
+							<dd>
+								Grid 컨테이너(Container)
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>기본 동작</dt>
+							<dd>
+								일정 비율을 가진 아이템을 제외하고는 <code class="bg_none t_444">stretch</code>가 설정된 것처럼 늘어난 형태로 동작합니다.
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>설정 가능한 값</dt>
+							<dd>
+								<code class="bg_none t_444">
+								normal, start, end, center, stretch,<br>
+								space-between, space-around, space-evenly,<br>
+								baseline, first-baseline, last-baseline
+								</code>
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>허용 범위</dt>
+							<dd>
+								인라인 / 행(<code class="bg_none t_444">row</code>) 축
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>요구 조건</dt>
+							<dd>
+								그리드 컨테이너의 여유 공간
+							</dd>
+						</dl>
+						<dl class="v_line">
+							<dt>예시</dt>
+							<dd>
+								그리드 트랙 크기가 컨테이너 크기보다 작은 경우, 시작 부분에 정렬됩니다.<br>
+								<code class="bg_none t_blue">space-between</code> 값을 설정하면 <mark>인라인 축(수평 방향)을 기준으로 공간을 분산 정렬</mark>합니다.
+							</dd>
+						</dl>
+						<figure class="img_figure mt_ms">
+							<img src="/ukncs/images/css/grid/uxkm_grid_g-vs-f_justify-content1.svg" alt="grid justify-content">
+						</figure>
+					</div>
+					<div class="in_table">
+						<h5><code class="bg_none">flex</code></h5>
+						<dl class="h_line">
+							<dt>정렬 컨테이너</dt>
+							<dd>
+								Flex 컨테이너(Container)
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>기본 동작</dt>
+							<dd>
+								<code class="bg_none t_444">Flexbox</code> 주(<code class="bg_none t_444">main</code>) 축의 기본 값이 <code class="bg_none t_444">flex-start</code> 이기에 잡아 당긴 것처럼 늘어납니다.
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>설정 가능한 값</dt>
+							<dd>
+								<code class="bg_none t_444">
+								normal, flex-start, flex-end, center, stretch,<br>
+								space-between, space-around, space-evenly,<br>
+								baseline, first-baseline, last-baseline
+								</code>
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>허용 범위</dt>
+							<dd>
+								인라인 / 주(main) 축
+							</dd>
+						</dl>
+						<dl class="h_line">
+							<dt>요구 조건</dt>
+							<dd>
+								컨테이너가 아이템보다 표시할 수 있는 공간이 주어질 경우, 정렬을 사용할 수 있습니다.
+							</dd>
+						</dl>
+						<dl class="v_line">
+							<dt>예시</dt>
+							<dd>
+								<code class="bg_none t_blue">justify-content</code> 속성은 <mark>컨테이너에 여유 공간이 있을 때 공간을 분산 정렬</mark>하도록 설정할 수 있습니다.
+							</dd>
+						</dl>
+						<figure class="img_figure mt_ms">
+							<img src="/ukncs/images/css/grid/uxkm_grid_g-vs-f_justify-content2.svg" alt="flex justify-content">
+						</figure>
+					</div>
+				</div>
+			</div>
 		</article>
 	</section>
 
