- 이미지 작업 및 코드 정리 중

--- a/assets/01-html/02-blockInline/01-block_element.html
+++ b/assets/01-html/02-blockInline/01-block_element.html
@@ -51,7 +51,16 @@
 
 	<section class="view_editor ex_code mt_l" data-target="html/02-blockInline/2.1.block_element.html">
 		<h2 class="ve_tit">block 요소의 기본 구조</h2>
+		<!--
 		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
+		</div>
+		-->
+		<div class="line_code_box line_code_number indent mt_m">
+			<ul>
+				<li>&lt;p style=&quot;border: 3px solid red&quot;&gt;</li>
+				<li class="indent">p요소는 display 속성값이 기본이 블록인 요소입니다.</li>
+				<li>&lt;/p&gt;</li>
+			</ul>
 		</div>
 	</section>
