--- a/assets/01-html/02-blockInline/02-div_block.html
+++ b/assets/01-html/02-blockInline/02-div_block.html
@@ -15,8 +15,18 @@
 
 	<section class="view_editor ex_code mt_l" data-target="html/02-blockInline/2.2.div_block.html">
 		<h2 class="ve_tit">div 구조 예시</h2>
+		<!--
 		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
+		</div>
+		-->
+		<div class="line_code_box line_code_number indent mt_m">
+			<ul>
+				<li>&lt;div style=&quot;background-color:lightgrey; color:green; text-align:center&quot;&gt;</li>
+				<li class="indent">&lt;h1&gt;div요소를 이용한 스타일 적용&lt;/h1&gt;</li>
+				<li class="indent">&lt;p&gt;이렇게 div요소로 여러 요소들을 묶은 다음에 style 속성과 클래스 등을 이용하여 한 번에 스타일을 적용할 수 있습니다.&lt;/p&gt;</li>
+				<li>&lt;/div&gt;</li>
+			</ul>
 		</div>
 	</section>
 
