--- a/assets/01-html/02-blockInline/04-span_inline.html
+++ b/assets/01-html/02-blockInline/04-span_inline.html
@@ -15,8 +15,19 @@
 
 	<section class="view_editor ex_code mt_l" data-target="html/02-blockInline/2.4.span_inline.html">
 		<h2 class="ve_tit">span 구조 예시</h2>
+		<!--
 		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
+		</div>
+		-->
+		<div class="line_code_box line_code_number indent mt_m">
+			<ul>
+				<li>&lt;p&gt;</li>
+				<li class="indent">이렇게</li>
+				<li class="indent">&lt;span style=&quot;border: 3px solid red&quot;&gt;span요소로 텍스트의 일부분&lt;/span&gt;</li>
+				<li class="indent">만을 따로 묶은 후에 스타일을 적용할 수 있습니다.</li>
+				<li>&lt;/p&gt;</li>
+			</ul>
 		</div>
 	</section>
 
