--- a/assets/01-html/02-blockInline/06-only_empty.html
+++ b/assets/01-html/02-blockInline/06-only_empty.html
@@ -14,8 +14,16 @@
 	</section>
 
 	<section class="view_editor ex_code mt_l" data-target="html/02-blockInline/2.6.only_empty.html">
+		<!--
 		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
+		</div>
+		-->
+		<div class="line_code_box line_code_number">
+			<ul>
+				<li>&lt;img src=&quot;sample.png&quot; alt=&quot;샘플 이미지&quot; /&gt;</li>
+				<li>&lt;img src=&quot;sample.png&quot; alt=&quot;샘플 이미지&quot;&gt;</li>
+			</ul>
 		</div>
 	</section>
 
