--- a/assets/01-html/02-blockInline/03-inline_element.html
+++ b/assets/01-html/02-blockInline/03-inline_element.html
@@ -41,7 +41,18 @@
 
 	<section class="view_editor ex_code mt_l" data-target="html/02-blockInline/2.3.inline_element.html">
 		<h2 class="ve_tit">inline 요소의 기본 구조</h2>
+		<!--
 		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
+		</div>
+		-->
+		<div class="line_code_box line_code_number indent mt_m">
+			<ul>
+				<li>&lt;p&gt;</li>
+				<li class="indent">&lt;span style=&quot;background-color:grey; color:orange&quot;&gt;span태그&lt;/span&gt;는 display 속성값이 기본이 인라인인 요소입니다.</li>
+				<li>&lt;/p&gt;</li>
+				<li></li>
+				<li>&lt;em&gt;first&lt;/em&gt;&lt;em&gt;second&lt;/em&gt;&lt;em&gt;third&lt;/em&gt;</li>
+			</ul>
 		</div>
 	</section>
