- 이미지 작업 및 코드 정리 중

--- a/assets/01-html/03-sections/01-header_element.html
+++ b/assets/01-html/03-sections/01-header_element.html
@@ -16,22 +16,33 @@
 	<section class="view_editor ex_code mt_l">
 		<h2 class="ve_tit">예제</h2>
 
+		<!--
 		<div class="view_editor ex_code" data-target="html/03-sections/3.1.header_element1.html">
 			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</div>
-		<div class="view_editor ex_code mt_s" data-target="html/03-sections/3.1.header_element2.html">
+		-->
+		<div class="line_code_box line_code_number indent mt_ms">
+			<ul>
+				<li>&lt;header&gt;</li>
+				<li class="indent">&lt;h1&gt;UXKM&lt;/h1&gt;</li>
+				<li class="indent">&lt;p&gt;Welcome to...&lt;/p&gt;</li>
+				<li>&lt;/header&gt;</li>
+			</ul>
+		</div>
+
+		<div class="view_editor ex_code indent mt_ms" data-target="html/03-sections/3.1.header_element2.html">
 			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</div>
-		<div class="view_editor ex_code mt_s" data-target="html/03-sections/3.1.header_element3.html">
+		<div class="view_editor ex_code indent mt_ms" data-target="html/03-sections/3.1.header_element3.html">
 			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</div>
-		<div class="view_editor ex_code mt_s" data-target="html/03-sections/3.1.header_element4.html">
+		<div class="view_editor ex_code indent mt_ms" data-target="html/03-sections/3.1.header_element4.html">
 			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
