--- a/assets/01-html/03-sections/02-heading_element.html
+++ b/assets/01-html/03-sections/02-heading_element.html
@@ -18,12 +18,12 @@
 
 	<section class="view_editor edit_code mt_l">
 		<h2 class="ve_tit">예제</h2>
-		<div class="view_editor edit_code" data-target="html/03-sections/3.2.heading_element1.html">
+		<div class="view_editor edit_code indent" data-target="html/03-sections/3.2.heading_element1.html">
 			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</div>
-		<div class="view_editor edit_code mt_s" data-target="html/03-sections/3.2.heading_element2.html">
+		<div class="view_editor edit_code indent mt_s" data-target="html/03-sections/3.2.heading_element2.html">
 			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
