--- a/assets/01-html/03-sections/04-nav_element.html
+++ b/assets/01-html/03-sections/04-nav_element.html
@@ -20,8 +20,21 @@
 
 	<section class="view_editor ex_code mt_l" data-target="html/03-sections/3.4.nav_element.html">
 		<h2 class="ve_tit">기본 문법</h2>
-		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+		<!--
+		<div  class="uk_editor indent" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
+		</div>
+		-->
+		<div class="line_code_box line_code_number indent mt_ms">
+			<ul>
+				<li>&lt;nav&gt;</li>
+				<li class="indent">&lt;ul&gt;</li>
+				<li class="indent_max">&lt;li&gt;&lt;a href=&quot;#&quot;&gt;Home&lt;/a&gt;&lt;/li&gt;</li>
+				<li class="indent_max">&lt;li&gt;&lt;a href=&quot;#&quot;&gt;About&lt;/a&gt;&lt;/li&gt;</li>
+				<li class="indent_max">&lt;li&gt;&lt;a href=&quot;#&quot;&gt;Contact&lt;/a&gt;&lt;/li&gt;</li>
+				<li class="indent">&lt;/ul&gt;</li>
+				<li>&lt;/nav&gt;</li>
+			</ul>
 		</div>
 	</section>
 
