--- a/assets/01-html/03-sections/06-footer_element.html
+++ b/assets/01-html/03-sections/06-footer_element.html
@@ -16,8 +16,25 @@
 
 	<section class="view_editor ex_code mt_m" data-target="html/03-sections/3.6.footer_element.html">
 		<h2 class="ve_tit">기본 문법</h2>
-		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+		<!--
+		<div  class="uk_editor indent" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
+		</div>
+		-->
+		<div class="line_code_box line_code_number indent mt_ms">
+			<ul>
+				<li>&lt;article&gt;</li>
+				<li class="indent">&lt;h1&gt;How to be a wizard&lt;/h1&gt;</li>
+				<li class="indent">&lt;ol&gt;</li>
+				<li class="indent_max">&lt;li&gt;Grow a long, majestic beard.&lt;/li&gt;</li>
+				<li class="indent_max">&lt;li&gt;Wear a tall, pointed hat.&lt;/li&gt;</li>
+				<li class="indent_max">&lt;li&gt;Have I mentioned the beard?&lt;/li&gt;</li>
+				<li class="indent">&lt;/ol&gt;</li>
+				<li class="indent">&lt;footer&gt;</li>
+				<li class="indent_max">&lt;p&gt;© 2019 Gandalf&lt;/p&gt;</li>
+				<li class="indent">&lt;/footer&gt;</li>
+				<li>&lt;/article&gt;</li>
+			</ul>
 		</div>
 	</section>
 
