--- a/assets/01-html/03-sections/07-aside_element.html
+++ b/assets/01-html/03-sections/07-aside_element.html
@@ -14,14 +14,32 @@
 
 	<section class="view_editor ex_code mt_l" data-target="html/03-sections/3.7.aside_element1.html">
 		<h2 class="ve_tit">기본 문법</h2>
-		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+		<!--
+		<div  class="uk_editor indent" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
+		</div>
+		-->
+		<div class="line_code_box line_code_number indent mt_ms">
+			<ul>
+				<li>&lt;article&gt;</li>
+				<li class="indent">&lt;p&gt;</li>
+				<li class="indent_max">The Disney movie &lt;em&gt;The Little Mermaid&lt;/em&gt; was</li>
+				<li class="indent_max">first released to theatres in 1989.</li>
+				<li class="indent">&lt;/p&gt;</li>
+				<li class="indent">&lt;aside&gt;</li>
+				<li class="indent_max">The movie earned $87 million during its initial release.</li>
+				<li class="indent">&lt;/aside&gt;</li>
+				<li class="indent">&lt;p&gt;</li>
+				<li class="indent_max">More info about the movie...</li>
+				<li class="indent">&lt;/p&gt;</li>
+				<li>&lt;/article&gt;</li>
+			</ul>
 		</div>
 	</section>
 
 	<section class="view_editor edit_code mt_l" data-target="html/03-sections/3.7.aside_element2.html">
 		<h2 class="ve_tit">예제</h2>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
