--- a/assets/01-html/03-sections/08-hgroup_element.html
+++ b/assets/01-html/03-sections/08-hgroup_element.html
@@ -16,8 +16,21 @@
 
 	<section class="view_editor ex_code mt_m" data-target="html/03-sections/3.8.hgroup_element.html">
 		<h2 class="ve_tit">기본 문법</h2>
-		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+		<!--
+		<div  class="uk_editor indent" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
+		</div>
+		-->
+		<div class="line_code_box line_code_number indent mt_ms">
+			<ul>
+				<li>&lt;hgroup&gt;</li>
+				<li class="indent">&lt;h1&gt;Calculus I&lt;/h1&gt;</li>
+				<li class="indent">&lt;h2&gt;Fundamentals&lt;/h2&gt;</li>
+				<li>&lt;/hgroup&gt;</li>
+				<li>&lt;p&gt;</li>
+				<li class="indent">This course will start with a brief introduction about the limit of a function.  …</li>
+				<li>&lt;/p&gt;</li>
+			</ul>
 		</div>
 	</section>
 
