- 애니메이션 수정

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 	<link href="/assets/lib/css/uk.css" rel="stylesheet" />
 	<link href="/assets/lib/css/uk_sub.css" rel="stylesheet" />
 
+	<script data-ad-client="ca-pub-6842292612653600" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<!-- js -->
 	<script type="text/javascript" src="/assets/lib/js/plugin/jquery-1.9.1.min.js"></script>
 	<!--[if lt IE 9]>
