--- a/main.html
+++ b/main.html
@@ -42,11 +42,11 @@
 			</div>
 		</div>
 		<div class="keyboard">
-			<span class="step1"><i></i></span>
-			<span class="step2"><i></i></span>
-			<span class="step3"><i></i></span>
-			<span class="step4"><i></i></span>
-			<span class="step5"><i></i></span>
+			<span class="step step1"><i></i></span>
+			<span class="step step2"><i></i></span>
+			<span class="step step3"><i></i></span>
+			<span class="step step4"><i></i></span>
+			<span class="step step5"><i></i></span>
 		</div>
 	</article>
 
