- 애니메이션 수정

--- a/assets/01-html/01-htmlStart/03-html_element.html
+++ b/assets/01-html/01-htmlStart/03-html_element.html
@@ -163,6 +163,14 @@
 					<li>&lt;/script&gt;</li>
 				</ul>
 			</div>
+			<div class="gist_code" data-url="https://gist.github.com/uxkm/7eb8c1860f230c5628c3742bfb33494f.js">
+				<!--<script src="https://gist.github.com/uxkm/7eb8c1860f230c5628c3742bfb33494f.js"></script>-->
+				<div class="gist_code_wrap"></div>
+			</div>
+			<div class="gist_code" data-url="https://gist.github.com/uxkm/8b8083083bbb985e9afb23ad517c28bb.js">
+				<!--<script src="https://gist.github.com/uxkm/7eb8c1860f230c5628c3742bfb33494f.js"></script>-->
+				<div class="gist_code_wrap"></div>
+			</div>
 			<aside class="browser_support mt_m" data-tit="data-global">
 				<ul>
 					<li class="ie">지원</li>
