--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 	<link href="/assets/lib/js/codemirror/addon/scroll/simplescrollbars.css" rel="stylesheet" /><!-- 코드미러 스크롤바 -->
 	<link href="/assets/lib/js/codemirror/lib/codemirror.css" rel="stylesheet" /><!-- 코드미러 기본 -->
 	<!--<link href="/assets/lib/css/swiper.css" rel="stylesheet" />-->
+	<link href="/assets/lib/css/highlight.min.css" rel="stylesheet" />
+	<link href="/assets/lib/css/github-gist.css" rel="stylesheet" />
 	<link href="/assets/lib/css/uk.css" rel="stylesheet" />
 	<link href="/assets/lib/css/uk_sub.css" rel="stylesheet" />
 
@@ -165,6 +167,7 @@
 <script type="text/javascript" src="/assets/lib/js/plugin/ukDetect-1.0.0.js"></script>
 <script type="text/javascript" src="/assets/lib/js/plugin/masonry.pkgd.min.js"></script>
 <script type="text/javascript" src="/assets/lib/js/plugin/iscroll.js"></script>
+<script type="text/javascript" src="/assets/lib/js/plugin/highlight.min.js"></script>
 <!--<script type="text/javascript" src="/assets/lib/js/plugin/jquery.touchFlow.js"></script>-->
 <!--<script src="//cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js"></script>-->
 
