- 애니메이션 수정

--- a/assets/01-html/01-htmlStart/03-html_element.html
+++ b/assets/01-html/01-htmlStart/03-html_element.html
@@ -175,7 +175,7 @@
 			</div>
 
 			<!-- gist skin 적용 -->
-			<div class="line_code_box km_gist_skin mt_ms" data-title="[data-*]">
+			<div class="uk_gist_code_box mt_ms" data-title="[data-*]">
 				<textarea>
 					<style>
 						html, body {height:100%;}
@@ -245,7 +245,7 @@
 					<li>&lt;/div&gt;</li>
 				</ul>
 			</div>
-			<div class="line_code_box km_gist_skin mt_ms">
+			<div class="uk_gist_code_box mt_ms">
 				<textarea readonly="readonly">
 					<div draggable="true">
 						The element to drag.
